Convert HTML/CSS About page with Desktop version

--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -27,7 +27,7 @@ html(lang='en')
                 span 4/450 West Botany Street, Rockdale NSW, 2216
               ul.menu
                 li
-                  a(href="") about
+                  a(href="about-us.html") about
                 li.service-hover
                   a(href="") services
                   ul.sub-menu
