--- a/jade/scss/_icons.scss
+++ b/jade/scss/_icons.scss
@@ -30,6 +30,22 @@
   background-position: -320px 0;
 }
 
+.iconsp-receive {
+  background-position: -400px 0;
+}
+
+.iconsp-consulation {
+  background-position: -480px 0;
+}
+
+.iconsp-planning {
+  background-position: -560px 0;
+}
+
+.iconsp-construction {
+  background-position: -640px 0;
+}
+
 .iconsp-35-enquire {
   background-position: 0 -80px;
 }
