--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -264,38 +264,54 @@ button:active, button:focus {
   background-position: -320px 0; }
 
 /* line 33, ../../jade/scss/_icons.scss */
+.iconsp-receive {
+  background-position: -400px 0; }
+
+/* line 37, ../../jade/scss/_icons.scss */
+.iconsp-consulation {
+  background-position: -480px 0; }
+
+/* line 41, ../../jade/scss/_icons.scss */
+.iconsp-planning {
+  background-position: -560px 0; }
+
+/* line 45, ../../jade/scss/_icons.scss */
+.iconsp-construction {
+  background-position: -640px 0; }
+
+/* line 49, ../../jade/scss/_icons.scss */
 .iconsp-35-enquire {
   background-position: 0 -80px; }
 
-/* line 37, ../../jade/scss/_icons.scss */
+/* line 53, ../../jade/scss/_icons.scss */
 .iconsp-35-facebook {
   background-position: -35px -80px; }
 
-/* line 41, ../../jade/scss/_icons.scss */
+/* line 57, ../../jade/scss/_icons.scss */
 .iconsp-35-quoteopen {
   background-position: -70px -80px; }
 
-/* line 45, ../../jade/scss/_icons.scss */
+/* line 61, ../../jade/scss/_icons.scss */
 .iconsp-35-quoteclose {
   background-position: -105px -80px; }
 
-/* line 49, ../../jade/scss/_icons.scss */
+/* line 65, ../../jade/scss/_icons.scss */
 .iconsp-35-enquire-mobile {
   background-position: -140px -80px; }
 
-/* line 53, ../../jade/scss/_icons.scss */
+/* line 69, ../../jade/scss/_icons.scss */
 .iconsp-35-email {
   background-position: -175px -80px; }
 
-/* line 57, ../../jade/scss/_icons.scss */
+/* line 73, ../../jade/scss/_icons.scss */
 .iconsp-35-location {
   background-position: -210px -80px; }
 
-/* line 61, ../../jade/scss/_icons.scss */
+/* line 77, ../../jade/scss/_icons.scss */
 .iconsp-35-phone-black {
   background-position: -245px -80px; }
 
-/* line 65, ../../jade/scss/_icons.scss */
+/* line 81, ../../jade/scss/_icons.scss */
 .iconsp-35-phone-white {
   background-position: -280px -80px; }
 
@@ -1700,13 +1716,144 @@ h1.title {
   line-height: 22px;
   margin-bottom: 11px; }
 
-/* line 41, ../../jade/scss/_contact.scss */
+/* line 40, ../../jade/scss/_contact.scss */
 .wrapper-contact .why-choose ul li:nth-child(3) .content {
   margin-bottom: 34px; }
 
-/* line 44, ../../jade/scss/_contact.scss */
+/* line 43, ../../jade/scss/_contact.scss */
 .contact-page.other-page {
   padding-bottom: 0; }
+
+/* line 1, ../../jade/scss/_about-us.scss */
+.about-page {
+  background: #ffffff; }
+  /* line 3, ../../jade/scss/_about-us.scss */
+  .about-page .background-image {
+    position: relative;
+    z-index: 1; }
+  /* line 7, ../../jade/scss/_about-us.scss */
+  .about-page .why-choose {
+    margin-top: 0;
+    padding-bottom: 197px; }
+    /* line 10, ../../jade/scss/_about-us.scss */
+    .about-page .why-choose .background-before {
+      transform: rotateY(180deg); }
+    /* line 13, ../../jade/scss/_about-us.scss */
+    .about-page .why-choose .background-after {
+      transform: rotateY(180deg); }
+    /* line 16, ../../jade/scss/_about-us.scss */
+    .about-page .why-choose h1.title {
+      margin: 80px 0 62px 0; }
+  /* line 20, ../../jade/scss/_about-us.scss */
+  .about-page .our-process {
+    background: #ffffff;
+    margin-top: 143px;
+    position: relative; }
+    /* line 25, ../../jade/scss/_about-us.scss */
+    .about-page .our-process .content-post p {
+      padding: 60px 118px;
+      color: #000000;
+      line-height: 25.56px; }
+    /* line 31, ../../jade/scss/_about-us.scss */
+    .about-page .our-process .background-after {
+      z-index: 9;
+      position: absolute;
+      bottom: -184px;
+      left: 0;
+      width: 100%; }
+    /* line 38, ../../jade/scss/_about-us.scss */
+    .about-page .our-process h1.title {
+      color: black;
+      margin-top: 43px; }
+    /* line 42, ../../jade/scss/_about-us.scss */
+    .about-page .our-process .process-list {
+      margin: 20px 0 90px 0; }
+      /* line 44, ../../jade/scss/_about-us.scss */
+      .about-page .our-process .process-list li {
+        display: inline-block;
+        width: 23%;
+        margin-right: 20px;
+        text-align: center;
+        background-image: url("img/bg-blue.png"); }
+        /* line 50, ../../jade/scss/_about-us.scss */
+        .about-page .our-process .process-list li:last-child {
+          margin-right: 0; }
+        /* line 53, ../../jade/scss/_about-us.scss */
+        .about-page .our-process .process-list li .sub-title {
+          text-align: center;
+          text-transform: uppercase;
+          font-family: "roboto_condensed_bold";
+          height: 68px;
+          display: table;
+          width: 100%;
+          position: relative; }
+          /* line 61, ../../jade/scss/_about-us.scss */
+          .about-page .our-process .process-list li .sub-title span {
+            display: table-cell;
+            vertical-align: middle; }
+        /* line 66, ../../jade/scss/_about-us.scss */
+        .about-page .our-process .process-list li p {
+          padding: 35px 0 25px 0;
+          text-align: center;
+          background-color: #ffffff;
+          display: block; }
+        /* line 72, ../../jade/scss/_about-us.scss */
+        .about-page .our-process .process-list li .traingle {
+          position: absolute;
+          background-image: url("../images/traingle.png");
+          background-repeat: no-repeat;
+          height: 16px;
+          width: 100%;
+          bottom: -16px;
+          z-index: 9;
+          background-size: 100%;
+          left: 0; }
+        /* line 83, ../../jade/scss/_about-us.scss */
+        .about-page .our-process .process-list li .content {
+          padding: 58px 27px;
+          line-height: 25.56px;
+          text-align: initial;
+          position: relative; }
+          /* line 88, ../../jade/scss/_about-us.scss */
+          .about-page .our-process .process-list li .content:before {
+            position: absolute;
+            content: "";
+            width: 0px;
+            border-top: 11px solid transparent;
+            border-bottom: 11px solid transparent;
+            border-left: 11px solid #1ca5d7;
+            right: -11px;
+            top: 50%; }
+  /* line 102, ../../jade/scss/_about-us.scss */
+  .about-page .our-history {
+    background: #171a1c;
+    position: relative;
+    padding: 268px 0 0 0; }
+    /* line 106, ../../jade/scss/_about-us.scss */
+    .about-page .our-history .background-after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 143px; }
+    /* line 113, ../../jade/scss/_about-us.scss */
+    .about-page .our-history h1.title {
+      margin-bottom: 60px; }
+    /* line 117, ../../jade/scss/_about-us.scss */
+    .about-page .our-history .image-history li {
+      margin-right: 32px;
+      width: 48%;
+      display: inline-block; }
+      /* line 121, ../../jade/scss/_about-us.scss */
+      .about-page .our-history .image-history li:last-child {
+        margin-right: 0; }
+    /* line 126, ../../jade/scss/_about-us.scss */
+    .about-page .our-history p {
+      padding: 60px 118px;
+      background: #ffffff;
+      color: #000000;
+      margin: 34px 0 132px 0;
+      line-height: 25.56px; }
 
 @media only screen and (max-width: 1217px) {
   /* line 2, ../../jade/scss/_responsive.scss */
