--- a/jade/scss/_about-us.scss
+++ b/jade/scss/_about-us.scss
@@ -7,6 +7,11 @@
   .why-choose {
     margin-top: 0;
     padding-bottom: 197px;
+    li {
+      p {
+        text-align: left;
+      }
+    }
     .background-before {
       transform: rotateY(180deg);
     }
